style.css
/* ... */
/*  -------------------------------- RESPONSIVE -------------------------------- */

@media (max-width: 1440px) {
  .footer-nav-div-wrapper {
    width: 360px;
  }
}
@media (max-width: 1024px) {
  .block-wrapper-4 {
    padding: 40px;
  }
  .project-title-wrapper {
    grid-column: 1 / -1;
  }
  .project-button-wrapper {
    grid-column: 1 / -1;
    justify-content: left;
  }
}
@media (max-width: 768px) {
  h2,
  .h2 {
    margin-bottom: 40px;
  }
  .button {
    min-width: 100.34px;
    padding: 12px 12px;
  }
  .container {
    width: min(100% - 32px);
  }
  .container2,
  .container3,
  .container4 {
    padding: 60px 0;
  }
  .container5 {
    padding: 80px 0 2.5rem;
  }
  .section-about {
    border-top-left-radius: 2rem;
    border-top-right-radius: 2rem;
  }
  .services-title {
    word-break: break-word;
  }
  .section-contact {
    border-bottom-left-radius: 2rem;
    border-bottom-right-radius: 2rem;
  }
  .header {
    background-color: var(--bg-light1);
  }
  .header.dark {
    background-color: var(--bg-night2);
  }
  .ul-shadow {
    width: 100vw;
    height: 100vh;
    position: fixed;
    top: 0;
    right: 0;
    z-index: 997;
    background: rgba(0, 0, 0, 0.4);
    opacity: 0;
    transition: opacity 0.3s linear;
    user-select: none;
    pointer-events: none;
  }
  .ul-shadow.open-nav {
    opacity: 1;
    user-select: all;
    pointer-events: all;
  }
  .navbar-design-element {
    content: "";
    width: 40vw;
    max-width: 400px;
    height: 40vw;
    max-height: 400px;
    border-radius: 50%;
    background: linear-gradient(25deg, #ebf2fd00, #8e8ffa11, #7752fe, #2e14af);
    position: absolute;
    top: 100%;
    left: 80%;
    transform: translate(-50%, -50%);
    z-index: -1;
    opacity: 0.2;
  }
  .header-ul {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 50vw;
    height: 50vh;
    color: #000;
    background-color: var(--bg-light1);
    position: absolute;
    top: -2px;
    right: 0;
    padding-left: 3rem;
    border-radius: 0.375rem;
    opacity: 0;
    scale: 0.3;
    transition: opacity 0.3s linear, scale 0.3s linear,
      background-color 0.3s linear, gap 0.3s linear;
    user-select: none;
    pointer-events: none;
    /* visibility: hidden; */
    transform-origin: top right;
    z-index: 998;
    overflow: hidden;
  }
  .header-ul.dark {
    background-color: var(--bg-night1);
  }
  .header-li {
    width: fit-content;
    margin-bottom: 32px;
    margin-left: 0;
  }
  .header-li:last-of-type {
    margin-bottom: 0;
  }
  .tooltip-text {
    display: none;
  }
  .dark-mode-text {
    display: inline-block;
    margin-right: 1rem;
    font-weight: 700;
  }
  .navbuttons {
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .header-ul.open-nav {
    width: 50vw;
    height: 50vh;
    color: #000;
    background-color: var(--bg-light1);
    opacity: 1;
    scale: 1;
    pointer-events: all;
    visibility: visible;
    z-index: 998;
  }
  .header-ul.open-nav.dark {
    background-color: var(--bg-night1);
    color: #fff;
  }
  .hero-title,
  .hero-subtitle {
    margin-bottom: 2rem;
  }
  .hero-button-div {
    gap: 1rem;
  }
  .container2-content {
    display: flex;
    flex-direction: column !important;
    align-items: center !important;
    gap: 4rem;
  }
  .block-wrapper-2,
  .block-wrapper-3 {
    display: flex;
    flex-direction: column;
    width: 100%;
  }
  .author-photo {
    width: 100%;
    max-width: 457.14px;
    /* min-width: 390px; */
    align-self: center;
  }
  .container-services {
    margin-top: 80px;
  }
  .services-wrapper {
    flex-direction: column;
    gap: 2rem;
  }
  .services-headline-wrapper > p:first-of-type {
    padding-top: 0;
  }
  .services-headline-wrapper {
    width: 100%;
  }
  .services-dropdown-wrapper {
    width: 100%;
  }
  .services-title.opened {
    padding-left: 0;
  }
  .services-dropdown-div:hover > .services-title {
    padding-left: 0;
  }
  .projects-container {
    grid-template-columns: repeat(1, minmax(0, 1fr));
  }
  .project-img-wrapper {
    border-radius: 0.375rem;
  }
  .projects-work {
    flex-direction: column;
    gap: 1rem;
  }
  .projects-work-pagination {
    font-family: "Outfit", sans-serif;
    font-size: 16vw;
    line-height: 1;
  }
  .block-wrapper-4 {
    width: 100%;
    padding: 40px 24px;
  }
  .disable,
  .disable.dark {
    background-color: #888;
  }
  .container4-content {
    /* width: 100%; */
    display: flex;
    flex-direction: column !important;
    align-items: center !important;
    gap: 4rem;
  }
  .block-wrapper-6,
  .block-wrapper-7 {
    width: 100%;
  }
  .info {
    display: flex;
    flex-direction: column;
    align-items: start;
    justify-content: left;
    gap: 2rem;
  }
  .info-div {
    width: 100%;
  }
  .form-div-1 {
    flex-direction: column;
    gap: 0;
  }
  .form-div-name,
  .form-div-email {
    width: 100%;
  }
  .container5-responsive {
    flex-direction: column;
    align-items: flex-start !important;
    gap: 2rem;
  }
  .footer-nav-div-wrapper {
    order: -1;
    width: 100%;
    margin-left: 0;
  }
  .footer-nav-div {
    width: 50%;
  }
}
@media (max-width: 500px) {
  .header-ul {
    width: 75vw;
  }
  .header-ul.open-nav {
    width: 75vw;
  }
  .block-wrapper-1 {
    justify-content: flex-end;
    padding-bottom: 2.5rem;
  }
  .hero-design-element {
    top: 50%;
    left: 50%;
    width: 90vw;
    height: 90vw;
  }
  .footer-design-element {
    width: 60vw;
    height: 60vw;
  }
}
/* ... */

